# discord-radio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  PROGRESS.md  README.md  USER_REQUIREMENTS.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  commands.py  config.py  main.py  milestones.py  player.py  presence.py  scheduler.py  state.py  tracker.py
ci/: github-actions.yml
dashboard/: __init__.py  auth.py  commands.py  config.py  main.py  queries.py
dashboard/templates/: base.html  dashboard.html  leaderboard.html  login.html  queue.html  servers.html  torrents.html
db/: __init__.py  database.py  guilds.py  models.py
docs/: archive-org-setup.md  dashboard-setup.md  multi-server.md  telegram-setup.md  torrents.md
file_provider/: Dockerfile  __init__.py  cache.py  config.py  db.py  media_types.py  requirements.txt  service.py  storage.py  torrent_client.py
file_provider/api/: main.py
file_provider/providers/: __init__.py  archive.py  base.py  local.py  telegram.py  torrent.py
provider/: __init__.py  client.py
tests/: test_control_plane.py  test_integration.py
tests/bot/: conftest.py  test_apply_server.py  test_commands.py  test_config.py  test_guild_scoped_state.py  test_main_helpers.py  test_milestones.py  test_player.py  test_presence.py  test_radio_clock.py  test_scheduler.py  test_scheduler_commands.py  test_scheduler_guild.py  test_state.py  test_tracker.py  test_tracker_guild.py
tests/dashboard/: conftest.py  test_auth.py  (+5 more)
(+15 files in other folders)
